# CMakeProjectTemplate

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: FindSQLiteCpp.cmake
module/: CMakeLists.txt
module/app/: CMakeLists.txt  main.cpp
module/feaext/: CMakeLists.txt
module/feaext/include/feaext/: FeatureExtractor.h
module/feaext/src/common/: DebugCommon.cpp
module/feaext/src/feaext/: FeatureExtractor.cpp
